// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ThemeSwitch отрабатывает изменение темы 1`] = `
<div
  class="theme"
  data-testid="switch"
>
  <label
    class="theme__switch"
    for="theme"
  >
    <input
      class="theme__checkbox"
      id="theme"
      type="checkbox"
    />
    <div
      class="theme__switch-item"
    >
      <svg
        class="theme__icon svg-icon"
        height="24"
        width="24"
      >
        <use
          xlink:href="#switch"
        />
      </svg>
    </div>
  </label>
</div>
`;

exports[`ThemeSwitch отрабатывает изменение темы 2`] = `
<body>
  <div
    data-testid="sprite"
    hidden=""
    id="sprite"
  />
  <div>
    <div
      class="theme"
      data-testid="switch"
    >
      <label
        class="theme__switch"
        for="theme"
      >
        <input
          class="theme__checkbox"
          id="theme"
          type="checkbox"
        />
        <div
          class="theme__switch-item"
        >
          <svg
            class="theme__icon svg-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#switch"
            />
          </svg>
        </div>
      </label>
    </div>
  </div>
</body>
`;

exports[`ThemeSwitch отрабатывает изменение темы 3`] = `
<body
  class="theme-dark"
>
  <div
    data-testid="sprite"
    hidden=""
    id="sprite"
  />
  <div>
    <div
      class="theme"
      data-testid="switch"
    >
      <label
        class="theme__switch"
        for="theme"
      >
        <input
          class="theme__checkbox"
          id="theme"
          type="checkbox"
        />
        <div
          class="theme__switch-item"
        >
          <svg
            class="theme__icon svg-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#switch"
            />
          </svg>
        </div>
      </label>
    </div>
  </div>
</body>
`;

exports[`ThemeSwitch сразу устанавливается темная тема из темы браузера 1`] = `
<body
  class="theme-dark"
>
  <div
    data-testid="sprite"
    hidden=""
    id="sprite"
  />
  <div>
    <div
      class="theme"
    >
      <label
        class="theme__switch"
        for="theme"
      >
        <input
          checked=""
          class="theme__checkbox"
          id="theme"
          type="checkbox"
        />
        <div
          class="theme__switch-item"
        >
          <svg
            class="theme__icon svg-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#switch"
            />
          </svg>
        </div>
      </label>
    </div>
  </div>
</body>
`;

exports[`ThemeSwitch сразу устанавливается темная тема из темы браузера 2`] = `
<body
  class=""
>
  <div
    data-testid="sprite"
    hidden=""
    id="sprite"
  />
  <div>
    <div
      class="theme"
    >
      <label
        class="theme__switch"
        for="theme"
      >
        <input
          checked=""
          class="theme__checkbox"
          id="theme"
          type="checkbox"
        />
        <div
          class="theme__switch-item"
        >
          <svg
            class="theme__icon svg-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#switch"
            />
          </svg>
        </div>
      </label>
    </div>
  </div>
</body>
`;

exports[`ThemeSwitch устанавливается светлая тема из localStorage 1`] = `
<body
  class=""
>
  <div
    data-testid="sprite"
    hidden=""
    id="sprite"
  />
  <div>
    <div
      class="theme"
    >
      <label
        class="theme__switch"
        for="theme"
      >
        <input
          class="theme__checkbox"
          id="theme"
          type="checkbox"
        />
        <div
          class="theme__switch-item"
        >
          <svg
            class="theme__icon svg-icon"
            height="24"
            width="24"
          >
            <use
              xlink:href="#switch"
            />
          </svg>
        </div>
      </label>
    </div>
  </div>
</body>
`;
